# jot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_PROMPT.md  CLAUDE_PROMPT_CONTEXT_TRIGGERS.md  CLAUDE_PROMPT_KEYBOARD_SHORTCUTS.md  CLAUDE_PROMPT_MILESTONE1_KEYBINDS.md  CLAUDE_PROMPT_MILESTONE2_HELP_IPC.md  CLAUDE_PROMPT_MILESTONE3_ROUTE_HELP.md  CONTRIBUTING.md  END_GOAL_SUMMARY.md  INSTALL.md  LICENSE  PROACTIVE_RECALL.md  PROJECT_CONTEXT.md  README.md  RELEASE.md  TESTING.md  aiOrganize.js  app-main.js  appWatcher.js  captureWorkflow.js  config.js  database.js  deep-research-report (1).md  intentParser.js  jot.code-workspace  jotAiInputHistory.js  jotAiPlan.js  jotLaunchSettings.js  keybinds.js  knownApps.js  llm.js  main.js  noteAppScan.js  noteCleanup.js  noteDeletionUndo.js  overlayCommand.js  package-lock.json  (+14 more)
.devcontainer/: Dockerfile
crates/screenpipe-recall/: Cargo.toml
crates/screenpipe-recall/src/: config.rs  context.rs  decision.rs  lib.rs  policy.rs  retrieval.rs
dev-docs/: ACQUISITION_AND_RISKS.md  BUSINESS_MODEL_AND_GTM.md  MARKET_AND_STRATEGY.md  MILESTONES.md  PRODUCT_ARCHITECTURE.md  README.md  VISION.md  p0-sticky-note-app.md
docs/: PRD.md  STATUS.md  architecture.md  interaction-model.md  known-issues.md  proactive-recall.md  repository-summary.md  roadmap.md
ee/: README.md
ee/sdk/: .gitignore  Cargo.toml  LICENSE.md  Package.swift  build.rs  index.d.ts  tsconfig.json
ee/sdk/Sources/Screenpipe/: NodeJSONLineTransport.swift  ScreenpipeError.swift  ScreenpipeModels.swift
ee/sdk/Tests/ScreenpipeTests/: ScreenpipeClientTests.swift
ee/sdk/__test__/: examples_e2e.test.mjs  lifecycle.test.mjs  node_json_bridge.test.mjs  options.test.mjs  public_api.test.mjs  snapshot.test.mjs  stress.test.mjs  tauri_helper.test.mjs
ee/sdk/bridges/: node-json-session.mjs
ee/sdk/docs/: integration.md  release.md
ee/sdk/electron/: preload.js
ee/sdk/examples/: record-10s.mjs
ee/sdk/examples/electron-app/: README.md  main.js  preload.js  renderer.js
ee/sdk/examples/tauri-app/: README.md  package.json  smoke.mjs
ee/sdk/examples/tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ee/sdk/examples/tauri-app/src-tauri/src/: main.rs
ee/sdk/session/: index.d.ts
ee/sdk/src/: a11y.rs  audio.rs  lib.rs
ee/sdk/tauri/: index.d.ts  index.js
ee/sdk/tauri/rust/: Cargo.toml
ee/sdk/tauri/rust/src/: lib.rs
engine/: .gitignore  Cargo.toml  PROACTIVE_RECALL.md  README.md  biome.json  lefthook.yml
integration/: README.md  engineManager.js  recallClient.js  screenpipeClient.js
intelligence/: executor.js
jot-ai/: jotAiAgent.js  jotAiCompact.js  jotAiPreferences.js  jotAiTools.js  (+2 more)
(+546 files in other folders)
