[package]
name = "screenpipe-recall"
version.workspace = true
authors.workspace = true
description = "Proactive recall: context-aware memory surfacing for Screenpipe"
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tracing.workspace = true

[dev-dependencies]
