[package]
name = "screenpipe-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri v2 plugin wrapper for @screenpipe/sdk"
license = "LicenseRef-Screenpipe-Enterprise"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "process", "sync", "time"] }
